kind/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: homework-app
  template:
    metadata:
      labels:
        app: homework-app
    spec:
      containers:
      - name: homework-container
        image: kalinichenkoit/homework24:latest
        ports:
        - containerPort: 8082
      imagePullSecrets:
      - name: danit-docker-secret
