kind/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
spec:
  selector:
    app: homework-app
  ports:
  - protocol: TCP
    port: 80    
    targetPort: 8082
